# length-prefixed-Protobuf-nic

./: .gitignore  CMakeLists.txt  README.md  main.cpp
src/protobuf-parser/: DelimitedMessagesStreamParser.hpp  helpers.hpp
src/protocol/: CMakeLists.txt
test/: CMakeLists.txt  Test_DelimitedMessagesStreamParser.cpp  Test_Helpers.cpp
